# clidownloader

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
edl/: __init__.py  __main__.py  auth.py  cli.py  colors.py  download.py  utils.py
tests/: conftest.py  test_cli.py  test_download.py  test_utils.py
