[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edl"
version = "0.2.1"
description = "edgy youtube downloader with login, 4k, mp3+art, lossless, sponsorblock"
authors = [{name = "edl", email = "edl@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "yt-dlp>=2024.1.0",
    "keyring>=24.0",
    "keyrings.alt>=4.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
]

[project.scripts]
edl = "edl.cli:main"

[project.urls]
Homepage = "https://github.com/osfv/clidownloader"
Repository = "https://github.com/osfv/clidownloader"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
